# serializer version: 1
# name: TestGeminiAIStandard.test_serdes[serialized]
  dict({
    'graph': dict({
      'edges': list([
        dict({
          'source': 0,
          'target': 1,
        }),
        dict({
          'source': 1,
          'target': 2,
        }),
      ]),
      'nodes': list([
        dict({
          'data': 'ChatVertexAIInput',
          'id': 0,
          'type': 'schema',
        }),
        dict({
          'data': dict({
            'id': list([
              'langchain',
              'chat_models',
              'vertexai',
              'ChatVertexAI',
            ]),
            'name': 'ChatVertexAI',
          }),
          'id': 1,
          'type': 'runnable',
        }),
        dict({
          'data': 'ChatVertexAIOutput',
          'id': 2,
          'type': 'schema',
        }),
      ]),
    }),
    'id': list([
      'langchain',
      'chat_models',
      'vertexai',
      'ChatVertexAI',
    ]),
    'kwargs': dict({
      'default_metadata': list([
      ]),
      'full_model_name': 'projects/test-project/locations/us-central1/publishers/google/models/gemini-1.0-pro-001',
      'location': 'us-central1',
      'max_output_tokens': 100,
      'max_retries': 2,
      'model_family': '1',
      'model_name': 'gemini-1.0-pro-001',
      'n': 1,
      'project': 'test-project',
      'request_parallelism': 5,
      'stop': list([
      ]),
      'temperature': 0.0,
    }),
    'lc': 1,
    'name': 'ChatVertexAI',
    'type': 'constructor',
  })
# ---
# name: TestGemini_15_AIStandard.test_serdes[serialized]
  dict({
    'graph': dict({
      'edges': list([
        dict({
          'source': 0,
          'target': 1,
        }),
        dict({
          'source': 1,
          'target': 2,
        }),
      ]),
      'nodes': list([
        dict({
          'data': 'ChatVertexAIInput',
          'id': 0,
          'type': 'schema',
        }),
        dict({
          'data': dict({
            'id': list([
              'langchain',
              'chat_models',
              'vertexai',
              'ChatVertexAI',
            ]),
            'name': 'ChatVertexAI',
          }),
          'id': 1,
          'type': 'runnable',
        }),
        dict({
          'data': 'ChatVertexAIOutput',
          'id': 2,
          'type': 'schema',
        }),
      ]),
    }),
    'id': list([
      'langchain',
      'chat_models',
      'vertexai',
      'ChatVertexAI',
    ]),
    'kwargs': dict({
      'default_metadata': list([
      ]),
      'full_model_name': 'projects/test-project/locations/us-central1/publishers/google/models/gemini-1.5-pro-001',
      'location': 'us-central1',
      'max_output_tokens': 100,
      'max_retries': 2,
      'model_family': '2',
      'model_name': 'gemini-1.5-pro-001',
      'n': 1,
      'project': 'test-project',
      'request_parallelism': 5,
      'stop': list([
      ]),
      'temperature': 0.0,
    }),
    'lc': 1,
    'name': 'ChatVertexAI',
    'type': 'constructor',
  })
# ---
